modificamos la variable de entorno para conectarla a la BD

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 #aqui creamos nuestra variable de entorno que tiene acceso a Json server
 
-REACT_APP_API_RECETAS=http://localhost:3005/recetas
+#REACT_APP_API_RECETAS=http://localhost:3005/recetas
 
-REACT_APP_API_ADMINISTRADORES=http://localhost:3005/usuarios
+REACT_APP_API_ADMINISTRADORES=http://localhost:4000/apireceta/usuario
 
-#REACT_APP_API_RECETAS=http://localhost:4000/apireceta/receta
+REACT_APP_API_RECETAS=http://localhost:4000/apireceta/receta
